--- a/css/style.css
+++ b/css/style.css
@@ -765,11 +765,11 @@ body.menu-open {
 .hero__title,
 .hero__text {
   opacity: 0;
-  -webkit-transform: translateY(20px);
-      -ms-transform: translateY(20px);
-          transform: translateY(20px);
-  -webkit-animation: fadeIn 1s ease-out forwards;
-          animation: fadeIn 1s ease-out forwards;
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
+  -webkit-animation: fadeInScale 1s ease-out forwards;
+          animation: fadeInScale 1s ease-out forwards;
 }
 
 .hero__label {
@@ -822,30 +822,6 @@ body.menu-open {
     opacity: 1;
     -webkit-transform: scale(1);
             transform: scale(1);
-  }
-}
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
   }
 }
 .shape-fill {
