--- a/scss/style.scss
+++ b/scss/style.scss
@@ -403,8 +403,8 @@ body {
 .hero__title,
 .hero__text {
 	opacity: 0;
-	transform: translateY(20px);
-	animation: fadeIn 1s ease-out forwards;
+	transform: scale(0.9);
+	animation: fadeInScale 1s ease-out forwards;
 }
 
 .hero__label {
@@ -437,16 +437,7 @@ body {
 		transform: scale(1); 
 	}
 }
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-		transform: translateY(-20px); 
-	}
-	100% {
-		opacity: 1;
-		transform: translateY(0); 
-	}
-}
+
 
 .shape-fill {
 	fill: #fff;
